--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "check-types": "tsc --pretty --noEmit",
+    "check-format": "prettier --check .",
+    "format": "prettier --write .",
+    "test-all": "npm run check-format && npm run lint && npm run check-types && npm run build",
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "11.0.1",
@@ -15,8 +20,24 @@
   },
   "devDependencies": {
     "@types/react": "17.0.11",
-    "eslint": "7.29.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
+    "eslint": "^7.29.0",
+    "eslint-config-airbnb": "^18.2.1",
     "eslint-config-next": "11.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^6.0.0",
+    "lint-staged": "^11.0.0",
+    "prettier": "2.3.1",
     "typescript": "4.3.4"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,json,html,css,md}": [
+      "prettier --write"
+    ]
   }
 }
